--- a/src/components/Mode/mode.module.scss
+++ b/src/components/Mode/mode.module.scss
@@ -1,12 +1,12 @@
 .mode {
+  $mode-shadow: .5rem .5rem 1rem #dedede;
+  $mode-shadow-fff: -.5rem -.5rem 1rem #ffffff;
   background: #fff;
   padding: 2rem;
   width: 10rem;
   height: 10rem;
-  box-shadow: 1rem 0 1rem 0 rgba(250, 250, 250, .5),
-    0rem 2rem 2rem 0 rgba(240, 240, 240, .5),
-    -.5rem 0 2rem 0 rgba(0, 0, 0, .1),
-    0 -.5rem 2rem 0 rgba(0, 0, 0, .1);
+  box-shadow: $mode-shadow,
+  $mode-shadow-fff;
   border-radius: 1rem;
   display: flex;
   justify-content: center;
