--- a/src/sass/pages/dashboard.scss
+++ b/src/sass/pages/dashboard.scss
@@ -1,6 +1,13 @@
 .dashboard {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  place-items: center;
-  min-height: calc(100vh - 10rem);
+  align-content: center;
+  justify-items: center;
+  row-gap: 6rem;
+  min-height: 80vh;
+
+  & p {
+    font-size: 1.4rem;
+    grid-column: 1/-1;
+  }
 }
