--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,5 @@
 @import 'abstracts/variable';
 
-@import './base/base';
+@import 'base/base';
 
-@import './pages/dashboard';
+@import 'pages/dashboard';
