--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,6 +2,10 @@
   background: hsla(36, 0%, 90%, .5);
   color: #4B4A4A;
   border-radius: 0 0 1rem 1rem;
+  
+  img {
+    width: 20rem;
+  }
 
   &__nav-list {
     display: flex;
