change header img to a svg

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,9 +2,19 @@
   background: hsla(36, 0%, 90%, .5);
   color: #4B4A4A;
   border-radius: 0 0 1rem 1rem;
-  
-  img {
-    width: 20rem;
+
+  &--home {
+    background: #fff;
+    box-shadow: 0 .5rem 1rem 0 rgba(0, 0, 0, .1);
+
+    & svg {
+      display: flex;
+      width: 50%;
+      fill: rgba(0, 190, 235, 1);
+      height: 7rem;
+      margin-left: 2rem;
+    }
+
   }
 
   &__nav-list {
