--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@300;500&family=Sen&family=Tenor+Sans&display=swap');
+
 @import 'abstracts/variable';
 
 @import 'base/base';
