--- a/src/sass/pages/_dashboard.scss
+++ b/src/sass/pages/_dashboard.scss
@@ -6,8 +6,10 @@
   row-gap: 6rem;
   min-height: 80vh;
 
-  & p {
+  & .start {
     font-size: 1.4rem;
     grid-column: 1/-1;
+    font-weight: 600;
+    letter-spacing: 1px;
   }
 }
