--- a/src/sass/pages/_dashboard.scss
+++ b/src/sass/pages/_dashboard.scss
@@ -6,6 +6,17 @@
   row-gap: 6rem;
   min-height: 80vh;
 
+  & .intro {
+    grid-column: 1 / -1;
+    text-align: center;
+
+    &>p {
+      font-size: 1.6rem;
+      width: 80%;
+      margin-inline: auto;
+    }
+  }
+
   & .start {
     font-size: 1.4rem;
     grid-column: 1/-1;
