sentence tab is working, showing correct and wrong words counting on header, showing correct/wrong word as user type also scroll the current word into view and fetching new para

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -22,7 +22,7 @@ body {
 
 .current-word {
   display: inline;
-  background: hsla(207, 100%, 87%, .5);
+  background: hsla(207, 100%, 90%, .5);
 
   & p {
     display: inline;
@@ -31,9 +31,10 @@ body {
 }
 
 .correct-word {
-  color: hsla(139, 44%, 64%, 1);
+  color: hsla(139, 46%, 54%, 1);
 }
 
 .wrong-word {
   color: hsla(0, 100%, 49%, 1);
+  text-decoration: underline;
 }
