added logic for words , added error page, filtering words < 4 for words practice, moved typed and server generated para into their own files, capitalize pages name, rename sliced, resetting values onClick on Links and improvised many other things.

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -20,6 +20,14 @@ body {
   font-family: 'Tenor Sans', sans-serif;
 }
 
+.word {
+  text-align: center;
+}
+
+.sentence {
+  text-align: initial;
+}
+
 .current-word {
   display: inline;
   background: hsla(207, 100%, 90%, .5);
