fixed a typo mistakes, correct wpm formula

--- a/src/components/Layout/pages/page.module.scss
+++ b/src/components/Layout/pages/page.module.scss
@@ -41,6 +41,7 @@
       border: none;
       padding: 0 .4rem;
       font-size: 1.5rem;
+      background: none;
       border: none;
       border-bottom: .1rem solid $border-color;
       text-align: center;
