Fixed som typos and fixed whole page scrolling

--- a/src/components/Layout/pages/page.module.scss
+++ b/src/components/Layout/pages/page.module.scss
@@ -26,6 +26,7 @@
       font-family: 'Assistant', sans-serif;
       letter-spacing: 1px;
       line-height: 140%;
+      position: relative;
     }
   }
 
