added mixins file and made response for 320px device

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -14,6 +14,10 @@ font-family: 'Tenor Sans', sans-serif;*/
 html {
   //1REM === 10PX
   font-size: 62.5%;
+  
+  @include respon(sm-phone) {
+    font-size: 45%;
+  }
 }
 
 body {
@@ -40,4 +44,16 @@ body {
 .wrong-word {
   color: hsla(0, 100%, 49%, 1);
   text-decoration: underline;
+}
+
+
+//animation
+@keyframes bounceUp {
+  0% {
+    scale: 1;
+  }
+
+  100% {
+    scale: 1.1;
+  }
 }
