fixed sentence got cut after a minute

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,15 +6,11 @@
   margin: 0;
 }
 
-/* 
-font-family: 'Assistant', sans-serif;
-font-family: 'Sen', sans-serif;
-font-family: 'Tenor Sans', sans-serif;*/
-
 html {
   //1REM === 10PX
   font-size: 62.5%;
 
+//1REM === 7.2PX
   @include respon(sm-phone) {
     font-size: 45%;
   }
