--- a/src/components/Layout/page/page.module.scss
+++ b/src/components/Layout/page/page.module.scss
@@ -9,7 +9,6 @@
   grid-template-columns: 1fr;
   justify-items: center;
   row-gap: 2rem;
-
   margin-top: 2rem;
 
   .generated-text {
@@ -18,7 +17,7 @@
     border-radius: .3rem;
     width: 100%;
     max-height: $max-height;
-    overflow: hidden scroll;
+    overflow: scroll;
     color: $primary-color;
 
     & p {
@@ -65,6 +64,7 @@
     text-align: center;
     color: $primary-color;
     font-size: 1.4rem;
+    position: relative;
   }
 
   .correct-para {
