fixed header on desktop, justified paras text. 100% responsive.

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -6,4 +6,11 @@
       @content
     }
   }
+
+
+  @if $breakpoint==m-desktop {
+    @media only screen and (min-width: 90em) {
+      @content
+    }
+  }
 }
