--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -5,10 +5,10 @@
   color: #4B4A4A;
   border-radius: 0 0 1rem 1rem;
 
-  &--home {
+  &__home {
     background: #fff;
     box-shadow: 0 .5rem 1rem 0 rgba(0, 0, 0, .1);
-    padding-inline: 1rem;
+    padding: 1.5rem 1rem;
 
     &,
     &>.author-link {
@@ -21,14 +21,15 @@
       width: 3rem;
       height: $svg-height;
     }
+  }
 
-    & .logo {
+  &__svg-cont {
+    &>svg {
+      width: 100%;
       display: flex;
-      width: 50%;
-      height: $svg-height;
       fill: rgba(0, 190, 235, 1);
+      height: $svg-height;
     }
-
   }
 
   &__nav-list {
@@ -56,5 +57,15 @@
         letter-spacing: .1rem;
       }
     }
+  }
+
+  &__totalWords {
+    display: none !important;
+  }
+}
+
+@media only screen and (min-width: 75em) {
+  .header__totalWords {
+    display: flex !important;
   }
 }
