--- a/src/components/Layout/page/page.module.scss
+++ b/src/components/Layout/page/page.module.scss
@@ -3,7 +3,7 @@
   $primary-color: hsla(0, 0%, 20%, 1);
   $border-color: hsla(0, 0%, 90%, 1);
   $border-color-active: #777;
-  $max-height: 15rem;
+  $max-height: 10rem;
 
   display: grid;
   grid-template-columns: 1fr;
@@ -13,19 +13,25 @@
 
   .generated-text {
     background: $background-color;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     border-radius: .3rem;
     width: 100%;
-    overflow: scroll hidden;
+    overflow: hidden scroll;
     max-height: $max-height;
     color: $primary-color;
+
+    display: flex;
+    justify-content: center;
 
     & p {
       font-size: 1.8rem;
       font-family: 'Assistant', sans-serif;
       letter-spacing: 1px;
-      line-height: 140%;
+      line-height: 1.5;
       position: relative;
+      text-align: justify;
+
+      margin-inline: auto;
     }
   }
 
@@ -37,6 +43,7 @@
 
     & textarea {
       width: 70%;
+      max-width: 50%;
       resize: none;
       border: none;
       padding: 0 .4rem;
@@ -58,13 +65,14 @@
   .typed-para {
     max-height: $max-height;
     width: 90%;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     border-radius: .5rem;
     overflow: hidden scroll;
     text-align: center;
     color: $primary-color;
     font-size: 1.4rem;
     position: relative;
+    font-family: 'Assistant', sans-serif;
   }
 
   .correct-para {
@@ -74,4 +82,25 @@
   .typed-para {
     background: hsla(201, 100%, 95%, 1);
   }
+
+  .typed-para>p,
+  .correct-para>p {
+    text-align: justify;
+    line-height: 1.5;
+  }
+}
+
+@media only screen and (min-width: 75em) {
+  .generated-text {
+    & p {
+      width: 80%;
+      padding: 1rem;
+    }
+  }
+
+  .correct-para,
+  .typed-para {
+    width: 80%;
+  }
+
 }
