--- a/src/components/UI/Mode/mode.module.scss
+++ b/src/components/UI/Mode/mode.module.scss
@@ -43,8 +43,8 @@
       50% {
         transform: rotate(-45deg);
       }
-      
-      75%{
+
+      75% {
         transform: rotate(20deg);
       }
 
@@ -67,5 +67,16 @@
     border-radius: .5rem;
     width: 10rem;
     text-align: center;
+  }
+}
+
+@media only screen and (min-width: 75em) {
+  .mode__link {
+    width: 15rem;
+    height: 15rem;
+  }
+
+  .mode__heading {
+    width: 15rem;
   }
 }
